--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,4 @@ numpy==1.24.0
 pandas==2.2.1
 pyshark==0.6
 scikit-learn==1.4.1.post1
-torch --index-url https://download.pytorch.org/whl/cpu
+torch --index-url https://download.pytorch.org/whl/cu121
