--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 numpy==1.24.0
 pandas==2.2.1
 scapy==2.5.0
-scikit-learn==1.4.1.post1
+scikit-learn==1.5.0
 torch --index-url https://download.pytorch.org/whl/cu121
